test/comment_in_formals.ref
Error: File "comment_in_formals.cppo", line 1, characters 15-30
Error: Invalid argument list
